--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "flag-icon-css": "^4.1.7",
+    "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-international-phone": "^4.3.0",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
+    "react-otp-input": "^3.1.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.3",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-timer-hook": "^3.0.7",
+    "use-timer": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
