--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-burger-menu": "^3.0.9",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-international-phone": "^4.3.0",
